# mnemossh

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/workflows/: rust.yml
examples/simple_project/: Cargo.toml  README.md
examples/simple_project/src/: main.rs
src/: lib.rs  main.rs
src/cli/: commands.rs  commands_update.rs  mod.rs
src/crypto/: keys.rs  mnemonic.rs  mod.rs
src/utils/: mod.rs
tests/: cli_tests.rs  integration_tests.rs  keys_tests.rs  mnemonic_tests.rs  utils_tests.rs
