[package]
name = "mnemossh"
version = "0.1.7"
edition = "2024"
authors = ["Ales Bykau <abkvme>"]
description = "A library and CLI tool for generating and managing Ed25519 SSH keys using BIP-39 mnemonic phrases"
license = "MIT"
repository = "https://github.com/abkvme/mnemossh"
keywords = ["ssh", "mnemonic", "bip39", "ed25519", "cli"]
categories = ["command-line-utilities", "cryptography"]

[lib]
name = "mnemossh"
path = "src/lib.rs"

[[bin]]
name = "mnemossh"
path = "src/main.rs"

[dependencies]
# Cryptography
ed25519-dalek = "2.1.1"
tiny-bip39 = "2.0.0"
sha2 = "0.10.9"
base64 = "0.22.1"
hmac = "0.12.1"
rand = "0.9.1"
zeroize = { version = "1.8.1", features = ["zeroize_derive"] }
hex = "0.4.3"
time = { version = "0.3.38", features = ["local-offset"] }

# CLI
clap = { version = "4.5.38", features = ["derive"] }
dialoguer = "0.11.0"
console = "0.15.11"

# Error handling
thiserror = "2.0.12"
anyhow = "1.0.98"

# File handling
dirs = "6.0.0"
secrecy = "0.10.3"

[dev-dependencies]
tempfile = "3.20.0"
assert_fs = "1.1.3"
