[package]
name = "mnemossh"
version = "0.1.10"
edition = "2024"
authors = ["Ales Bykau <abkvme>"]
description = "A library and CLI tool for generating and managing Ed25519 SSH keys using BIP-39 mnemonic phrases"
license = "MIT"
repository = "https://github.com/abkvme/mnemossh"
keywords = ["ssh", "mnemonic", "bip39", "ed25519", "cli"]
categories = ["command-line-utilities", "cryptography"]

[lib]
name = "mnemossh"
path = "src/lib.rs"

[[bin]]
name = "mnemossh"
path = "src/main.rs"

[dependencies]
# Cryptography
ed25519-dalek = { version = "2.2.0", default-features = false, features = ["pkcs8", "pem", "digest"] }
tiny-bip39 = "2.0.0"
sha2 = "0.10.9"
base64 = "0.22.1"
hmac = "0.12.1"
rand = "0.9.2"
zeroize = { version = "1.8.2", features = ["zeroize_derive"] }
hex = "0.4.3"
time = { version = "0.3.44", features = ["local-offset"] }
md5 = "0.7.0"

# CLI
clap = { version = "4.5.48", features = ["derive"] }
dialoguer = "0.12.0"
console = { version = "0.16.1", default-features = false }

# Error handling
thiserror = "2.0.17"
anyhow = "1.0.100"

# File handling
directories = "6.0.0"
secrecy = "0.10.3"

[dev-dependencies]
tempfile = "3.23.0"
assert_fs = "1.1.3"
